# Evolution

./: Cargo.toml  README.md  config.longrun.toml  config.toml  founder_pool.json  stderr.txt  test_log.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: repo-auditor.agent.md
.github/prompts/: config-workflow-check.prompt.md  feature-audit.prompt.md  release-readiness.prompt.md
docs/: BUILD_OPTIMIZATION.md  DEBUGGING.md  DESIGN.md  DETERMINISM.md  PLAN.md  REPO_AUDIT_2026-03.md
docs/archive/: CODE_ANALYSIS.md  DESIGN.md  DESIGN_ANSWERS.md  DESIGN_QUESTIONS.md  REPO_ANALYSIS_2026-03.md
examples/: boundary_test.rs  determinism_test.rs  feature_test.rs  food_compute.wgsl  food_render.wgsl  food_system_test.rs  food_test.rs  foraging_founder_search.rs  founder_pool_tool.rs  integration_test.rs  metrics_logger.rs  nn_diversity_probe.rs  nn_test.rs  perf_test.rs  predation_test.rs  repro_test.rs  simulation_feature_probe.rs  simulation_smoke_test.rs  species_test.rs  stability_search.rs  train_survivor_bank.rs
examples/support/: headless.rs
src/: app.rs  config.rs  lib.rs  main.rs
src/compute/: buffers.rs  mod.rs  pipeline.rs
src/compute/shaders/: act.wgsl  sense.wgsl  think.wgsl  world.wgsl
src/render/: camera.rs  mod.rs
src/render/shaders/: organism.wgsl  world_render.wgsl
src/simulation/: genome.rs  mod.rs  organism.rs  save_load.rs  species.rs  world.rs
src/ui/: inspector.rs  mod.rs  stats.rs  theme.rs
tests/: workflow_regressions.rs
