[package]
name = "evolution-sim"
version = "0.1.0"
edition = "2021"
authors = ["Evolution Simulator Team"]
description = "GPU-accelerated evolution simulator with neural network organisms"
license = "MIT"
readme = "README.md"

[dependencies]
# GPU
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Windowing
winit = "0.29"

# UI
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"

# Math
glam = "0.27"

# Random
rand = "0.8"
rand_xoshiro = "0.6"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"

# === Build Profiles ===
# See docs/BUILD_OPTIMIZATION.md for build speed tips

# Dev profile: balanced for fast iteration
[profile.dev]
opt-level = 1
incremental = true
debug = "line-tables-only"  # Faster than full debug info

# Dependencies always optimized for better dev performance
[profile.dev.package."*"]
opt-level = 3

# Fast dev: quick iteration with moderate optimization
# Usage: cargo build --profile dev-fast
[profile.dev-fast]
inherits = "dev"
opt-level = 2
debug = false
incremental = true

# Release: maximum optimization for distribution
[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Fast release: for testing release-like builds quickly
# Usage: cargo build --profile release-fast
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
